# rust-playground

./: README.md
Day1/: Cargo.toml
Day1/src/: main.rs
UdemyRustProgrammingLanguage-07/: Cargo.toml
UdemyRustProgrammingLanguage-07/src/: main.rs
cookbook_01p17/: Cargo.toml
cookbook_01p17/src/: lib.rs
cookbook_01p22/: Cargo.toml
cookbook_01p22/src/: lib.rs
cookbook_ch1_p25/pi-estimator/: Cargo.toml
cookbook_ch1_p25/pi-estimator/src/: main.rs  rounding.rs
cookbook_ch1_p25/rust-pilib/: Cargo.toml
cookbook_ch1_p25/rust-pilib/src/: lib.rs
rust7days_02_generic_iterators/: Cargo.toml
rust7days_02_generic_iterators/src/: main.rs
rust7days_02_generics/: Cargo.toml
rust7days_02_generics/src/: main.rs
rust7days_02_handling_errors_with_the_from_trait/: Cargo.toml
rust7days_02_money/: Cargo.toml
rust7days_02_money/src/: lib.rs
rust7days_02_randlib/: Cargo.toml
rust7days_02_randlib/src/: main.rs
rust7days_02_traits/: Cargo.toml
rust7days_02_traits/src/: lib.rs  main.rs
rust7days_02_useful_traits/rust7days_02_useful_traits/: Cargo.toml
rust7days_02_useful_traits/rust7days_02_useful_traits/src/: lib.rs
scheduling_problem/: Cargo.toml  README.txt
udemy_rust_programming_language_08_core_data_types/: Cargo.toml
udemy_rust_programming_language_08_core_data_types/src/: main.rs
udemy_rust_programming_language_09_operators/: Cargo.toml
udemy_rust_programming_language_09_operators/src/: main.rs
